# AiVeridiaEvents

./: .env.example  .gitattributes  .gitignore  Makefile  P2_ejecutar_y_fidelizar_evento.bpmn  README.md  arquitectura_mvp.md  docker-compose.yml  graph_comercial.py  main.tf  schema_multitenant.sql
.github/workflows/: ci.yml
apps/agents/: Dockerfile  demo_funnel.txt  pyproject.toml
apps/agents/src/agentcore/: app_comercial.py  app_operativo.py
apps/agents/src/api/: deps.py  internal.py  main.py  owner.py  webhooks_pagos.py  webhooks_whatsapp.py
apps/agents/src/cli/: fakes.py  simulador.py
apps/agents/src/core/: config.py  db.py  dedup.py
apps/agents/src/graphs/: checkpointer.py  graph_comercial.py  graph_operativo.py  runtime.py
apps/agents/src/llm/: prompts.py  router.py
apps/agents/src/rag/: embeddings.py  ingesta.py  retriever.py
apps/agents/src/tools/: aprobaciones.py  bookings.py  channels.py  cobranza.py  contracts.py  crm.py  events.py  fidelizacion.py  payments.py  pricing.py  proveedores.py  timers.py
apps/agents/tests/: conftest.py  test_api_edge.py  test_api_health.py  test_api_owner.py  test_double_booking.py  test_extraccion_rapida.py  test_graph_comercial.py  test_graph_operativo.py  test_ml_pipeline.py  test_rag_aislamiento.py  test_rag_unit.py  test_review_fixes.py  test_rls_isolation.py  test_seed.py
apps/dashboard/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
db/: seed.sql
docs/: lectura_bpmn.md
infra/: README.md  dashboard.tf  main.tf  observability.tf
ml/: README.md
(+39 files in other folders)
