[project]
name = "aiveridia-agents"
version = "0.1.0"
description = "aiVeridia Events — LangGraph agents service (P1 comercial, P2 operativo)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "psycopg[binary,pool]>=3.2",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
]

[project.optional-dependencies]
cloud = [
    "langchain-aws>=0.2",
    "langchain-google-genai>=2.0",
    "boto3>=1.34",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# el simulador usa lambdas para alternar stdin/script: legible tal cual
"src/cli/simulador.py" = ["E731"]
